welcome.lessons.welcome.array.island.Island.scala.error
island:4: error: type mismatch;
 found   : Unit
 required: Int
	for (etage <- 0 to 4) {
                   ^